fix: 修复无法sketch自动注册在打包fatJar异常的问题